Match TPC-DS q04 distributed operator shape